// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal :  renders a snapshot of <ActionModal /> with mock props when actionIsVisble is false 1`] = `
<ActionModal
  actionIsVisible={false}
  affiliate="mockAffiliate"
  affiliateId="mockId"
  hideAction={[MockFunction]}
  product="digital product"
  productId="mockProductId"
  requestId="mockId"
  status="Approved"
  title="mock title"
  updateStatus={[MockFunction]}
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[MockFunction]}
    title={null}
    visible={false}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[MockFunction]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={false}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Dialog>
  </Modal>
</ActionModal>
`;

exports[`ActionModal :  renders a snapshot of <ActionModal /> with mock props when actionIsVisble is true 1`] = `
<ActionModal
  actionIsVisible={true}
  affiliate="mockAffiliate"
  affiliateId="mockId"
  hideAction={[MockFunction]}
  product="digital product"
  productId="mockProductId"
  requestId="mockId"
  status="Approved"
  title="mock title"
  updateStatus={[MockFunction]}
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[MockFunction]}
    title={null}
    visible={true}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[MockFunction]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={true}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="ant-modal-root"
                >
                  <div
                    class="ant-modal-mask"
                  />
                  <div
                    class="ant-modal-wrap"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal"
                      role="document"
                      style="width: 520px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                        >
                          <header
                            class="header"
                          >
                            <h4
                              class="ant-typography"
                            >
                              mock title
                               
                              mockAffiliate
                            </h4>
                          </header>
                          <section
                            class="content"
                          >
                            <p>
                              <span
                                class="ant-typography"
                              >
                                Are you sure you want to 
                                Approved
                                 
                                <span
                                  class="name"
                                >
                                  mockAffiliate
                                </span>
                                 from marketing 
                                <span
                                  class="product"
                                >
                                  digital product
                                </span>
                                ?
                              </span>
                            </p>
                          </section>
                          <footer
                            class="footer"
                          >
                            <button
                              class="ant-btn ant-btn-lg"
                              type="button"
                            >
                              <span>
                                Cancel
                              </span>
                            </button>
                            <button
                              class="ant-btn ant-btn-danger ant-btn-lg"
                              type="button"
                            >
                              <span>
                                mock title
                              </span>
                            </button>
                          </footer>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <ForwardRef(CloseOutlined)
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={false}
              focusTriggerAfterClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              maskTransitionName="ant-fade"
              okType="primary"
              onCancel={[MockFunction]}
              onClose={[Function]}
              prefixCls="ant-modal"
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 1,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <header
                                    class="header"
                                  >
                                    <h4
                                      class="ant-typography"
                                    >
                                      mock title
                                       
                                      mockAffiliate
                                    </h4>
                                  </header>
                                  <section
                                    class="content"
                                  >
                                    <p>
                                      <span
                                        class="ant-typography"
                                      >
                                        Are you sure you want to 
                                        Approved
                                         
                                        <span
                                          class="name"
                                        >
                                          mockAffiliate
                                        </span>
                                         from marketing 
                                        <span
                                          class="product"
                                        >
                                          digital product
                                        </span>
                                        ?
                                      </span>
                                    </p>
                                  </section>
                                  <footer
                                    class="footer"
                                  >
                                    <button
                                      class="ant-btn ant-btn-lg"
                                      type="button"
                                    >
                                      <span>
                                        Cancel
                                      </span>
                                    </button>
                                    <button
                                      class="ant-btn ant-btn-danger ant-btn-lg"
                                      type="button"
                                    >
                                      <span>
                                        mock title
                                      </span>
                                    </button>
                                  </footer>
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={null}
              transitionName="ant-zoom"
              visible={true}
              width={520}
              wrapClassName=""
            >
              <div
                className="ant-modal-root"
              >
                <Mask
                  motionName="ant-fade"
                  prefixCls="ant-modal"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="ant-modal-mask-hidden"
                    motionName="ant-fade"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="ant-modal-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle0"
                    closable={false}
                    closeIcon={
                      <span
                        className="ant-modal-close-x"
                      >
                        <ForwardRef(CloseOutlined)
                          className="ant-modal-close-icon"
                        />
                      </span>
                    }
                    confirmLoading={false}
                    destroyOnClose={false}
                    focusTriggerAfterClose={true}
                    footer={null}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    maskTransitionName="ant-fade"
                    motionName="ant-zoom"
                    okType="primary"
                    onCancel={[MockFunction]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="ant-modal"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 1,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <header
                                          class="header"
                                        >
                                          <h4
                                            class="ant-typography"
                                          >
                                            mock title
                                             
                                            mockAffiliate
                                          </h4>
                                        </header>
                                        <section
                                          class="content"
                                        >
                                          <p>
                                            <span
                                              class="ant-typography"
                                            >
                                              Are you sure you want to 
                                              Approved
                                               
                                              <span
                                                class="name"
                                              >
                                                mockAffiliate
                                              </span>
                                               from marketing 
                                              <span
                                                class="product"
                                              >
                                                digital product
                                              </span>
                                              ?
                                            </span>
                                          </p>
                                        </section>
                                        <footer
                                          class="footer"
                                        >
                                          <button
                                            class="ant-btn ant-btn-lg"
                                            type="button"
                                          >
                                            <span>
                                              Cancel
                                            </span>
                                          </button>
                                          <button
                                            class="ant-btn ant-btn-danger ant-btn-lg"
                                            type="button"
                                          >
                                            <span>
                                              mock title
                                            </span>
                                          </button>
                                        </footer>
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={null}
                    transitionName="ant-zoom"
                    visible={true}
                    width={520}
                    wrapClassName=""
                  >
                    <CSSMotion
                      motionName="ant-zoom"
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={false}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="ant-modal"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 520,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="ant-modal-content"
                            >
                              <div
                                className="ant-modal-body"
                              >
                                <header
                                  className="header"
                                >
                                  <Title
                                    level={4}
                                  >
                                    <ForwardRef
                                      component="h4"
                                    >
                                      <ResizeObserver
                                        disabled={true}
                                        onResize={[Function]}
                                      >
                                        <SingleObserver
                                          disabled={true}
                                          key="rc-observer-key-0"
                                          onResize={[Function]}
                                        >
                                          <DomWrapper>
                                            <EllipsisTooltip
                                              enabledEllipsis={false}
                                              isEllipsis={false}
                                            >
                                              <Typography
                                                className=""
                                                component="h4"
                                                onClick={null}
                                                style={
                                                  Object {
                                                    "WebkitLineClamp": undefined,
                                                  }
                                                }
                                              >
                                                <h4
                                                  className="ant-typography"
                                                  onClick={null}
                                                  style={
                                                    Object {
                                                      "WebkitLineClamp": undefined,
                                                    }
                                                  }
                                                >
                                                  <Ellipsis
                                                    enabledMeasure={false}
                                                    onEllipsis={[Function]}
                                                    rows={1}
                                                    text={
                                                      Array [
                                                        "mock title",
                                                        " ",
                                                        "mockAffiliate",
                                                      ]
                                                    }
                                                    width={0}
                                                  >
                                                    mock title
                                                     
                                                    mockAffiliate
                                                  </Ellipsis>
                                                </h4>
                                              </Typography>
                                            </EllipsisTooltip>
                                          </DomWrapper>
                                        </SingleObserver>
                                      </ResizeObserver>
                                    </ForwardRef>
                                  </Title>
                                </header>
                                <section
                                  className="content"
                                >
                                  <p>
                                    <Text>
                                      <ForwardRef
                                        component="span"
                                      >
                                        <ResizeObserver
                                          disabled={true}
                                          onResize={[Function]}
                                        >
                                          <SingleObserver
                                            disabled={true}
                                            key="rc-observer-key-0"
                                            onResize={[Function]}
                                          >
                                            <DomWrapper>
                                              <EllipsisTooltip
                                                enabledEllipsis={false}
                                                isEllipsis={false}
                                              >
                                                <Typography
                                                  className=""
                                                  component="span"
                                                  onClick={null}
                                                  style={
                                                    Object {
                                                      "WebkitLineClamp": undefined,
                                                    }
                                                  }
                                                >
                                                  <span
                                                    className="ant-typography"
                                                    onClick={null}
                                                    style={
                                                      Object {
                                                        "WebkitLineClamp": undefined,
                                                      }
                                                    }
                                                  >
                                                    <Ellipsis
                                                      enabledMeasure={false}
                                                      onEllipsis={[Function]}
                                                      rows={1}
                                                      text={
                                                        Array [
                                                          "Are you sure you want to ",
                                                          "Approved",
                                                          " ",
                                                          <span
                                                            className="name"
                                                          >
                                                            mockAffiliate
                                                          </span>,
                                                          <React.Fragment>
                                                             from marketing 
                                                            <span
                                                              className="product"
                                                            >
                                                              digital product
                                                            </span>
                                                          </React.Fragment>,
                                                          "?",
                                                        ]
                                                      }
                                                      width={0}
                                                    >
                                                      Are you sure you want to 
                                                      Approved
                                                       
                                                      <span
                                                        className="name"
                                                      >
                                                        mockAffiliate
                                                      </span>
                                                       from marketing 
                                                      <span
                                                        className="product"
                                                      >
                                                        digital product
                                                      </span>
                                                      ?
                                                    </Ellipsis>
                                                  </span>
                                                </Typography>
                                              </EllipsisTooltip>
                                            </DomWrapper>
                                          </SingleObserver>
                                        </ResizeObserver>
                                      </ForwardRef>
                                    </Text>
                                  </p>
                                </section>
                                <footer
                                  className="footer"
                                >
                                  <Button
                                    onClick={[MockFunction]}
                                    size="large"
                                  >
                                    <Wave
                                      disabled={false}
                                    >
                                      <button
                                        className="ant-btn ant-btn-lg"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        <LoadingIcon
                                          existIcon={false}
                                          loading={false}
                                          prefixCls="ant-btn"
                                        >
                                          <CSSMotion
                                            motionName="ant-btn-loading-icon-motion"
                                            onAppearActive={[Function]}
                                            onAppearStart={[Function]}
                                            onEnterActive={[Function]}
                                            onEnterStart={[Function]}
                                            onLeaveActive={[Function]}
                                            onLeaveStart={[Function]}
                                            removeOnLeave={true}
                                            visible={false}
                                          >
                                            <DomWrapper />
                                          </CSSMotion>
                                        </LoadingIcon>
                                        <span
                                          key=".0"
                                        >
                                          Cancel
                                        </span>
                                      </button>
                                    </Wave>
                                  </Button>
                                  <Button
                                    loading={false}
                                    onClick={[Function]}
                                    size="large"
                                    type="danger"
                                  >
                                    <Wave
                                      disabled={false}
                                    >
                                      <button
                                        className="ant-btn ant-btn-danger ant-btn-lg"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        <LoadingIcon
                                          existIcon={false}
                                          loading={false}
                                          prefixCls="ant-btn"
                                        >
                                          <CSSMotion
                                            motionName="ant-btn-loading-icon-motion"
                                            onAppearActive={[Function]}
                                            onAppearStart={[Function]}
                                            onEnterActive={[Function]}
                                            onEnterStart={[Function]}
                                            onLeaveActive={[Function]}
                                            onLeaveStart={[Function]}
                                            removeOnLeave={true}
                                            visible={false}
                                          >
                                            <DomWrapper />
                                          </CSSMotion>
                                        </LoadingIcon>
                                        <span
                                          key=".0"
                                        >
                                          mock title
                                        </span>
                                      </button>
                                    </Wave>
                                  </Button>
                                </footer>
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </Modal>
</ActionModal>
`;

exports[`ActionModal :  renders a snapshot of <ActionModal /> with no props 1`] = `
<ActionModal>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    title={null}
    visible={false}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={false}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Dialog>
  </Modal>
</ActionModal>
`;
